--- a/it/settings.json
+++ b/it/settings.json
@@ -1,76 +1,182 @@
 {
-    "appUpdate": "Aggiornamento dell'applicazione",
-    "checkingAppUpdate": "Ricerca degli aggiornamenti in corso...",
-    "checkForUpdates": "Cerca aggiornamenti",
-    "failedCheckingAppUpdate": "Errore durante la ricerca degli aggiornamenti",
-    "newUpdateAvailable": "È disponibile una nuova versione di LM Studio! 🎉",
-    "downloadingInProgress": "Download dell'aggiornamento in corso...",
-    "downloadUpdate": "Aggiorna a LM Studio {{version}}",
-    "yourCurrentVersion": "Attualmente sei alla versione:",
-    "latestVersion": "L'ultima versione è:",
-    "downloadLabel": "Aggiorna ora",
-    "cancelDownloadLabel": "Annulla",
-    "downloadingUpdate": "Download dell'aggiornamento in corso...",
-    "updateDownloaded": "Aggiornamento scaricato!",
-    "restartAppToUpdate": "Riavvia l'applicazione per applicare l'aggiornamento",
-    "doItLater": "Lo farò più tardi",
-    "failedToUpdate": "L'aggiornamento dell'applicazione è fallito. Verifica la tua connessione a Internet o riprova più tardi.",
-    "retryInBackground": "Riprova in background",
-    "laterLabel": "Più tardi",
-    "releaseNotesLabel": "Note di rilascio",
-    "remindMeLater": "Ricordamelo più tardi",
-    "failedDownloadUpdate": "Errore durante il download dell'aggiornamento",
-    "installAndRelaunch": "Installa e riavvia",
-    "uptodate": "Sei aggiornato! La versione corrente è {{version}}",
-    "preferences": "Preferenze",
-    "sideButtonLabels": "Mostra etichette dei pulsanti laterali",
-    "colorThemeLabel": "Tema colore",
-    "complexityLevelLabel": "Livello di complessità dell'interfaccia utente",
-    "selectComplexityLevelPlaceholder": "Scegli un livello di complessità predefinito dell'interfaccia utente",
-    "userComplexityLevelLabel": "Utente",
-    "powerUserComplexityLevelLabel": "Utente avanzato",
-    "developerComplexityLevelLabel": "Sviluppatore",
-    "chatSettingsLabel": "Impostazioni chat",
-    "firstTimeExperienceLabel": "Prima esperienza con la chat",
-    "firstTimeExperienceMarkCompletedLabel": "Segna come completato",
-    "firstTimeExperienceResetLabel": "Reimposta",
-    "showPromptSuggestionsLabel": "Mostra suggerimenti di messaggi quando si crea una nuova chat",
-    "shiftEnterToSendLabel": "Usa Shift + Invio per inviare il messaggio",
-    "darkThemeLabel": "Scuro",
-    "lightThemeLabel": "Chiaro",
-    "systemThemeLabel": "Automatico",
-    "sepiaThemeLabel": "Seppia",
-    "unloadPreviousModelLabel": "Quando si seleziona un modello da caricare, prima si scaricano quelli attualmente caricati",
-    "languageLabel": "Lingua",
-    "changeLanguageLabel": "Cambia la lingua dell'applicazione",
-    "developerLabel": "Sviluppatore",
-    "showExperimentalFeaturesLabel": "Mostra funzionalità sperimentali",
-    "appFirstLoadLabel": "Primo caricamento dell'applicazione",
-    "showDebugInfoBlocksInChatLabel": "Mostra blocchi di informazioni di debug nella chat",
-    "autoLoadBundledLLMLabel": "Carica automaticamente un modello LLM incluso all'avvio",
-    "showReleaseNotes": "Mostra note di rilascio",
-    "hideReleaseNotes": "Nascondi note di rilascio",
-  
-    "backendDownloadNewUpdate": "Sono disponibili nuovi backend!",
-    "backendDownloadNewUpdateAction": "Vai alla pagina degli sviluppatori",
-  
-    "backendDownloadChannel.label": "Canale di download dei pacchetti di estensione di LM Studio",
-    "backendDownloadChannel.value.stable": "Stabile",
-    "backendDownloadChannel.value.beta": "Beta",
-    "backendDownloadChannel.value.latest": "Sviluppo",
-    "backendDownloadChannel.shortLabel": "Canale di download degli ambienti di esecuzione",
-    "backendDownloadChannel.hint": "Scegli il canale da cui scaricare i pacchetti di estensione di LM Studio. \"{{stableName}}\" è il canale consigliato per la maggior parte degli utenti.",
-  
-    "modelLoadingGuardrails.label": "Limiti di caricamento dei modelli",
-    "modelLoadingGuardrails.description": "Caricare modelli oltre i limiti di risorse del sistema può causare instabilità o il blocco del sistema. I limiti di sicurezza evitano sovraccarichi accidentali. Regola questi limiti qui se necessario, ma tieni presente che caricare modelli vicino al limite del sistema potrebbe ridurre la stabilità.",
-    "modelLoadingGuardrails.value.off": "SPENTO (Non consigliato)",
-    "modelLoadingGuardrails.value.low": "Rilassato",
-    "modelLoadingGuardrails.value.medium": "Bilanciato",
-    "modelLoadingGuardrails.value.high": "Conservativo",
-    "modelLoadingGuardrails.value.custom": "Personalizzato",
-    "modelLoadingGuardrails.custom.label": "Limite di Memoria: ",
-    "modelLoadingGuardrails.custom.unitGB": "GB",
-    "modelLoadingGuardrails.custom.description": "Imposta un limite di memoria personalizzato per il caricamento dei modelli. I modelli non verranno caricati se, durante il caricamento, si supera questo limite.",
-  
-    "expandConfigsOnClick": "Espandi configurazioni al clic invece che al passaggio del cursore"
-  }
+	"settingsDialogTitle": "Impostazioni Applicazione",
+	"settingsDialogButtonTooltip": "Impostazioni Applicazione",
+	"accountDialogButtonTooltip": "Profilo utente",
+	"settingsNewButtonPopover": {
+		"primary": "Le impostazioni dell'app sono ora nell'angolo in basso a destra.",
+		"secondary": "Fare clic sul pulsante ⚙️ per aprirli.",
+		"tertiary": "Oppure premere"
+	},
+	"appUpdate": "Aggiornamento dell'applicazione",
+	"checkingAppUpdate": "Ricerca degli aggiornamenti in corso...",
+	"checkForUpdates": "Cerca aggiornamenti",
+	"failedCheckingAppUpdate": "Errore durante la ricerca degli aggiornamenti",
+	"newUpdateAvailable": "È disponibile una nuova versione di LM Studio! 🎉",
+	"newBetaUpdateAvailable": "È disponibile una nuova versione beta di LM Studio! 🛠️🎉",
+	"downloadingInProgress": "Download dell'aggiornamento in corso...",
+	"downloadUpdate": "Aggiorna a LM Studio {{version}}",
+	"downloadBetaUpdate": "Aggiorna a LM Studio Beta {{version}} (build {{build}})",
+	"downloadCompleted": "Download completato!",
+	"updateDownloadComplete": "L'aggiornamento di LM Studio è pronto",
+	"updateDownloadFailed": "Aggiornamento fallito!",
+	"hasFinishedDownloading": "ha terminato il download.",
+	"yourCurrentVersion": "Attualmente sei alla versione:",
+	"latestVersion": "L'ultima versione è:",
+	"downloadLabel": "Aggiorna ora",
+	"downloadLabel/Linux": "Scarica l'aggiornamento",
+	"cancelDownloadLabel": "Annulla",
+	"downloadingUpdate": "Download dell'aggiornamento {{item}} in corso...",
+	"updateDownloaded": "Aggiornamento scaricato!",
+	"restartAppToUpdate": "Riavvia l'applicazione per applicare l'aggiornamento",
+	"appUpdatedToastTitle": "Updated to {{title}}",
+	"appUpdatedToastDescriptionPrefix": "Visualizza il ",
+	"AppUpdatedToastDescriptionReleaseNotes": "Note di rilascio",
+	"toolUseToastTitle": "Novità in Beta: Uso degli strumenti e chiamate di funzione API",
+	"toolUseToastDescription": "Sostituzione dello strumento OpenAI Utilizzabile con modelli selezionati come Llama 3.1/3.2, Mistral e Qwen.",
+	"toolUseToastButtonText": "Andate alla pagina degli sviluppatori per provarlo",
+	"doItLater": "Lo farò più tardi",
+	"failedToUpdate": "L'aggiornamento dell'applicazione è fallito. Verifica la tua connessione a Internet o riprova più tardi.",
+	"retryInBackground": "Riprova in background",
+	"laterLabel": "Più tardi",
+	"releaseNotesLabel": "Note di rilascio",
+	"remindMeLater": "Ricordamelo più tardi",
+	"failedDownloadUpdate": "Errore durante il download dell'aggiornamento",
+	"installAndRelaunch": "Installa e riavvia",
+	"uptodate": "Sei aggiornato! La versione corrente è {{version}}",
+	"preferences": "Preferenze",
+	"general": "Generale",
+	"sideButtonLabels": "Mostra etichette dei pulsanti laterali",
+	"showModelFileNames": "I miei modelli: mostra sempre il nome completo del file del modello",
+	"colorThemeLabel": "Tema colore",
+	"complexityLevelLabel": "Livello di complessità dell'interfaccia utente",
+	"selectComplexityLevelPlaceholder": "Scegli un livello di complessità predefinito dell'interfaccia utente",
+	"userComplexityLevelLabel": "Utente",
+	"powerUserComplexityLevelLabel": "Utente avanzato",
+	"developerComplexityLevelLabel": "Sviluppatore",
+	"chatSettingsLabel": "Impostazioni chat",
+	"chat/alwaysShowPromptTemplate": "Mostra sempre il modello di richiesta nella barra laterale della chat",
+	"chat/highlightChatMessageOnHover": "Evidenzia il messaggio di chat al passaggio del mouse",
+	"chat/doubleClickMessageToEdit": "Fare doppio clic su un messaggio di chat per modificarlo",
+	"chat/aiNaming/label": "Chat AI Naming",
+	"chat/aiNaming/mode/label": "Nomi di chat generati dall'intelligenza artificiale",
+	"chat/aiNaming/mode/value/never": "Mai",
+	"chat/aiNaming/mode/value/never/subTitle": "Non creare nomi di chat generati dall'AI",
+	"chat/aiNaming/mode/value/auto": "Automatico",
+	"chat/aiNaming/mode/value/auto/subTitle": "Decide se creare i nomi in base alla velocità di generazione",
+	"chat/aiNaming/mode/value/always": "Sempre",
+	"chat/aiNaming/mode/value/always/subTitle": "Creazione di nomi di chat generati dall'intelligenza artificiale indipendentemente dalla velocità di generazione",
+	"chat/aiNaming/emoji": "Utilizzate le emoji nei nomi delle chat generate dall'intelligenza artificiale",
+	"chat/keyboardShortcuts/label": "Scorciatoie da tastiera",
+	"chat/keyboardShortcuts/verbPrefix": "Utilizzo",
+	"chat/keyboardShortcuts/regenerate": "per rigenerare l'ultimo messaggio in chat",
+	"chat/keyboardShortcuts/sendMessage": "per inviare il messaggio",
+	"onboarding/blockTitle": "Suggerimenti per l'onboarding",
+	"onboarding/dismissedHints": "Suggerimenti per l'onboarding",
+	"onboarding/resetHintTooltip": "Fare clic per riabilitare questo suggerimento per l'onboarding",
+	"onboarding/resetAllHints": "Azzeramento di tutti i suggerimenti di Onboarding",
+	"onboarding/noneDismissed": "Nessun suggerimento eliminato, attualmente tutti i suggerimenti per l'aiuto all'imbarco appariranno fino al prossimo licenziamento.",
+	"firstTimeExperienceLabel": "Prima esperienza con la chat",
+	"firstTimeExperienceMarkCompletedLabel": "Segna come completato",
+	"firstTimeExperienceResetLabel": "Reimposta",
+	"showPromptSuggestionsLabel": "Mostra suggerimenti di messaggi quando si crea una nuova chat",
+	"shiftEnterToSendLabel": "Usa Shift + Invio per inviare il messaggio",
+	"darkThemeLabel": "Scuro",
+	"lightThemeLabel": "Chiaro",
+	"systemThemeLabel": "Automatico",
+	"sepiaThemeLabel": "Seppia",
+	"unloadPreviousModelLabel": "Quando si seleziona un modello da caricare, prima si scaricano quelli attualmente caricati",
+	"languageLabel": "Lingua",
+	"changeLanguageLabel": "Cambia la lingua dell'applicazione",
+	"developerLabel": "Sviluppatore",
+	"localServiceLabel": "Servizio LLM locale (headless)",
+	"showExperimentalFeaturesLabel": "Mostra funzionalità sperimentali",
+	"appFirstLoadLabel": "Primo caricamento dell'applicazione",
+	"showDebugInfoBlocksInChatLabel": "Mostra blocchi di informazioni di debug nella chat",
+	"autoLoadBundledLLMLabel": "Carica automaticamente un modello LLM incluso all'avvio",
+	"showReleaseNotes": "Mostra note di rilascio",
+	"hideReleaseNotes": "Nascondi note di rilascio",
+	"backendDownloadNewUpdate": "Sono disponibili nuovi backend!",
+	"backendDownloadNewUpdateAction": "Vai alla pagina degli sviluppatori",
+	"backendDownloadChannel.label": "Canale di download dei pacchetti di estensione di LM Studio",
+	"backendDownloadChannel.value.stable": "Stabile",
+	"backendDownloadChannel.value.beta": "Beta",
+	"backendDownloadChannel.value.latest": "Sviluppo",
+	"backendDownloadChannel.shortLabel": "Canale di download degli ambienti di esecuzione",
+	"backendDownloadChannel.hint": "Scegli il canale da cui scaricare i pacchetti di estensione di LM Studio. \"{{stableName}}\" è il canale consigliato per la maggior parte degli utenti.",
+	"appUpdateChannel.label": "Canale Aggiornamenti",
+	"appUpdateChannel.value.stable": "Stabile",
+	"appUpdateChannel.value.beta": "Beta",
+	"appUpdateChannel.value.alpha": "Alpha",
+	"appUpdateChannel.shortLabel": "Canale di aggiornamento dell'app",
+	"appUpdateChannel.hint": "Scegliere il canale da cui ricevere gli aggiornamenti dell'applicazione LM Studio. \"{{stableName}}\" is the recommended channel for most users.",
+	"modelLoadingGuardrails.label": "Limiti di caricamento dei modelli",
+	"modelLoadingGuardrails.description": "Caricare modelli oltre i limiti di risorse del sistema può causare instabilità o il blocco del sistema. I limiti di sicurezza evitano sovraccarichi accidentali. Regola questi limiti qui se necessario, ma tieni presente che caricare modelli vicino al limite del sistema potrebbe ridurre la stabilità.",
+	"modelLoadingGuardrails.value.off": "SPENTO (Non consigliato)",
+	"modelLoadingGuardrails.value.off/subTitle": "Nessuna precauzione contro il sovraccarico del sistema",
+	"modelLoadingGuardrails.value.off/detail": "Dettaglio off",
+	"modelLoadingGuardrails.value.low": "Rilassato",
+	"modelLoadingGuardrails.value.low/subTitle": "Lievi precauzioni contro il sovraccarico del sistema",
+	"modelLoadingGuardrails.value.low/detail": "Dettaglio rilassato",
+	"modelLoadingGuardrails.value.medium": "Bilanciato",
+	"modelLoadingGuardrails.value.medium/subTitle": "Precauzioni moderate contro il sovraccarico del sistema",
+	"modelLoadingGuardrails.value.medium/detail": "Dettaglio equilibrato",
+	"modelLoadingGuardrails.value.high": "Conservativo",
+	"modelLoadingGuardrails.value.high/subTitle": "Forti precauzioni contro il sovraccarico del sistema",
+	"modelLoadingGuardrails.value.high/detail": "Dettaglio rigoroso",
+	"modelLoadingGuardrails.value.custom": "Personalizzato",
+	"modelLoadingGuardrails.value.custom/subTitle": "Impostare il proprio limite per le dimensioni massime del modello che può essere caricato",
+	"modelLoadingGuardrails.value.custom/detail": "Dettaglio personalizzato",
+	"modelLoadingGuardrails.custom.label": "Limite di Memoria: ",
+	"modelLoadingGuardrails.custom.unitGB": "GB",
+	"modelLoadingGuardrails.custom.description": "Imposta un limite di memoria personalizzato per il caricamento dei modelli. I modelli non verranno caricati se, durante il caricamento, si supera questo limite.",
+	"experimentalLoadPresets": "Abilita il supporto della configurazione del carico del modello nelle preimpostazioni",
+	"experimentalLoadPresets.description": "Consentire alle preimpostazioni di includere le configurazioni di carico del modello. Questa funzione è sperimentale ed è gradito un feedback.",
+	"unloadPreviousJITModelOnLoad": "Auto-evict dei modelli JIT: garantisce che venga caricato al massimo 1 modello via JIT in qualsiasi momento (scarica il modello precedente)",
+	"autoDeleteExtensionPacks": "Eliminazione automatica dei pacchetti di estensioni di runtime utilizzati meno di recente",
+	"autoUpdateExtensionPacks": "Aggiornamento automatico dei pacchetti di estensioni Runtime selezionati",
+	"useHFProxy.label": "Utilizzare il Proxy per Hugging Face di LM Studio",
+	"useHFProxy.hint": "Utilizzare Hugging Face Proxy di LM Studio per cercare e scaricare i modelli. Questo può aiutare gli utenti che hanno problemi ad accedere direttamente a Hugging Face.",
+	"separateReasoningContentInResponses": "Se applicabile, separare `reasoning_content` e `content` nelle risposte API.",
+	"separateReasoningContentInResponses/hint": "Questa impostazione funziona solo per i modelli di 'ragionamento' come DeepSeek R1, le sue varianti distillate e altri modelli che producono CoT nei tag `<think>` e `</think>`.",
+	"promptWhenCommittingUnsavedChangesWithNewFields": "Preimpostazioni: Mostra la finestra di conferma quando si inseriscono nuovi campi nella preimpostazione.",
+	"promptWhenCommittingUnsavedChangesWithNewFields.description": "È utile se si vuole evitare di aggiungere accidentalmente nuovi campi alle preimpostazioni.",
+	"enableLocalService": "Abilitare il servizio LLM locale",
+	"enableLocalService.subtitle": "Utilizzare il server LLM di LM Studio senza dover tenere aperta l'applicazione LM Studio.",
+	"enableLocalService.description": "Se abilitato, il servizio LLM locale di LM Studio verrà lanciato all'avvio. Chiudendo LM Studio, il servizio LLM locale rimarrà in esecuzione nella barra delle applicazioni.",
+	"expandConfigsOnClick": "Espandi configurazioni al clic invece che al passaggio del cursore"
+	"migrateChats": {
+		"label": "Migrare le chat precedenti alla versione 0.3.0",
+		"hasBetterLabel": "Re-migrare le chat precedenti alla 0.3.0",
+		"action_one": "Migrare 1 chat",
+		"action_other": "Migrare {{count}} chat",
+		"inProgress": "Migrazione delle chat...",
+		"hint": {
+			"primary": "Abbiamo rinnovato la struttura interna dei dati per le chat v0.3.0+ per supportare funzioni come i messaggi di chat multiversione. Per far sì che le vecchie chat vengano visualizzate nell'app, è necessario migrarle al nuovo formato.",
+			"details": "Il processo di migrazione NON cancella le vecchie chat, ma ne crea una copia nel nuovo formato.",
+			"footer": "È ancora possibile accedere alle vecchie chat attraverso le versioni precedenti di LM Studio. Attualmente le immagini non vengono migrate automaticamente."
+		},
+		"hasBetterHint": {
+			"primary": "Abbiamo migliorato il migratore di chat da quando avete migrato le vostre vecchie chat. Volete eseguirlo di nuovo?",
+			"details": "Il processo di migrazione creerà una nuova cartella per contenere le nuove chat migrate. Le vecchie chat rimarranno intatte.",
+			"footer": "È ancora possibile accedere alle vecchie chat attraverso le versioni precedenti di LM Studio. Attualmente le immagini non vengono migrate automaticamente."
+		},
+		"success": "Le chat sono state migrate con successo!",
+		"success_one": "Migrazione riuscita di 1 chat",
+		"success_other": "Migrazione riuscita di {{count}} chat",
+		"showInstructionsButton": "Istruzioni per la presentazione",
+		"footerCardText": "Le chat delle versioni precedenti di LM Studio devono essere migrate per poter essere utilizzate in questa versione.",
+		"hasBetterFooterCardText": "Abbiamo migliorato il migratore di chat da quando avete migrato le vostre vecchie chat. È possibile rieseguire il processo di migrazione. (Creeremo una nuova cartella per contenere le nuove chat migrate.)",
+		"dismissConfirm": "Congedare",
+		"dismissConfirmDescription": "È sempre possibile gestire la migrazione della chat in Impostazioni"
+	},
+	"toolConfirmation": {
+		"label": "Conferma dello Strumento Call",
+		"neverAsk": {
+			"label": "Non chiedete mai conferme prima di eseguire uno strumento (NON RACCOMANDATO).",
+			"hint": "Disattivare le conferme prima di eseguire uno strumento. Non è consigliabile.",
+			"warnTitle": "Sei sicuro?",
+			"warnDescription": "La disabilitazione della conferma delle chiamate agli strumenti è pericolosa. Se uno dei vostri plugin contribuisce a uno strumento che può potenzialmente eseguire azioni distruttive (come l'esecuzione di un comando, la cancellazione di file, la sovrascrittura di file, il caricamento di file, ecc. È sempre possibile disabilitare le conferme per ogni strumento o anche per ogni plugin. L'attivazione di questa opzione NON è consigliata. Si prega di fare attenzione.",
+			"warnButton": "Sono consapevole dei rischi"
+		}
+	}
+}
